--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,65 @@ h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
+html, body {
+  height: 100%;
+}
+
+:root {
+    --background: #F9FAFB;
+    --sidebar: #1F2937;
+    --card: #FFFFFF;
+    --text-primary: #111827;
+    --text-secondary: #6B7280;
+    --borders-lines: #E5E7EB;
+    --primary-accent: #3B82F6;
+    --secondary-accent: #10B981;
+    --warning: #F59E0B;
+    --error: #EF4444;
+    --succes: #22C55E;
+}
+
+
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
+    height: 100%;
+}
+
+.header {
+    background-color: var(--card);
+    color: var(--text-primary);
+    grid-column: 2 / 3;
+    display: grid;
+}
+
+.sidebar {
+    background-color: var(--sidebar);
+    color: var(--background);
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.board {
+    background-color: var(--background);
+    color: var(--text-primary);
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+
+
+.top {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.bottom {
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+}
