--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,9 @@ html, body {
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 3fr 3fr 3fr 1fr;
+    gap: 8px;
 }
-
 
 
 .header-top {
@@ -110,3 +111,32 @@ html, body {
   flex-direction: column;
 }
 
+.board-main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+  grid-column: 1 / 2;
+  grid-row: 2 / 5;
+} 
+
+.card {
+  background-color: var(--card);
+}
+
+.header {
+  height:fit-content;
+  width: fit-content;
+  background-color: var(--background);
+  grid-area: 1 / 1;
+}
+
+.board-side {
+  grid-column: 2 / 3;
+  grid-row: 1 / 5;
+}
+
+.board-footer {
+  grid-column: 1 / 3;
+  grid-row: 5 / 6;
+  background-color: var(--background);
+}
