--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ html, body {
 }
 
 :root {
-    --background: #F9FAFB;
+    --background: #F3F4F6;
     --sidebar: #1F2937;
     --card: #FFFFFF;
     --text-primary: #111827;
@@ -66,7 +66,12 @@ html, body {
     background-color: var(--card);
     color: var(--text-primary);
     grid-column: 2 / 3;
+    grid-row: 1 / 2;
     display: grid;
+    padding: 0.75rem 1rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    z-index: 10;
+    
 }
 
 .sidebar {
@@ -83,8 +88,9 @@ html, body {
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 3fr 3fr 3fr 1fr;
+    grid-template-rows: 0.5fr 3fr 3fr 3fr 0.5fr;
     gap: 8px;
+    
 }
 
 
@@ -93,12 +99,17 @@ html, body {
     justify-content: space-around;
     align-items: center;
     
+    
+    
 }
 
 .header-bottom {
     display:flex;
     justify-content: space-around;
     align-items: center;
+    
+    
+    
 }
 
 .sidebar {
@@ -117,26 +128,59 @@ html, body {
   gap: 16px;
   grid-column: 1 / 2;
   grid-row: 2 / 5;
+  padding: 16px;
 } 
 
 .card {
   background-color: var(--card);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  border-left: 10px solid #3B82F6;
 }
 
-.header {
-  height:fit-content;
-  width: fit-content;
+.board-header {
   background-color: var(--background);
-  grid-area: 1 / 1;
+  grid-area: 1 / 1 / 2 / 2;
+  padding-left: 16px;
+  
 }
 
 .board-side {
   grid-column: 2 / 3;
-  grid-row: 1 / 5;
+  grid-row: 2 / 5;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr;
+  gap: 16px;
+  padding: 16px;
 }
 
 .board-footer {
   grid-column: 1 / 3;
   grid-row: 5 / 6;
   background-color: var(--background);
+}
+
+.board-side-header {
+  grid-area: 1 / 2 / 2 / 3;
+  padding-left: 16px;
+}
+
+.side-card {
+  background-color: var(--card);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+}
+
+.second-side-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.card2 {
+  height: 100%;
+  width: 100%;
+  background-color: var(--card);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
 }
