Add Links and Styling to Sidebar and Content to Cards

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,38 @@ html, body {
     --succes: #22C55E;
 }
 
+:root {
+  --font-base: 'Inter', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  --font-mono: 'JetBrains Mono', 'Fira Code', 'Courier New', monospace;
+
+  /* Sizes */
+  --fs-xs: 0.75rem;   /* 12px */
+  --fs-sm: 0.875rem;  /* 14px */
+  --fs-md: 1rem;      /* 16px (body) */
+  --fs-lg: 1.25rem;   /* 20px (section headers) */
+  --fs-xl: 1.5rem;    /* 24px (page titles) */
+  --fs-xxl: 2rem;     /* 32px (main dashboard title) */
+
+  /* Weights */
+  --fw-regular: 400;
+  --fw-medium: 500;
+  --fw-semibold: 600;
+  --fw-bold: 700;
+}
+
+
+body {
+  font-family: var(--font-base);
+  font-size: var(--fs-md);
+  font-weight: var(--fw-regular);
+  color: var(--text-primary);
+}
+
+h1 {
+  font-size: var(--fs-xxl);
+  font-weight: var(--fw-bold);
+}
+
 
 
 .container {
@@ -97,19 +129,28 @@ html, body {
 .header-top {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    
-    
-    
 }
 
 .header-bottom {
     display:flex;
     justify-content: space-around;
-    align-items: center;
-    
-    
-    
+}
+
+.sidebar-top {
+  line-height: 2em;
+  align-items: flex-start;
+  font-size: var(--fs-xxl);
+  font-weight: var(--fw-bold);
+  margin: 1em 0 0 2em;
+}
+
+.sidebar-bottom {
+  line-height: 2em;
+  margin-top: 1.5em;
+  font-size: var(--fs-xxl);
+  font-weight: var(--fw-bold);
+  align-items: flex-start;
+  margin: 1.5em 0 0 2em;
 }
 
 .sidebar {
@@ -128,7 +169,7 @@ html, body {
   gap: 16px;
   grid-column: 1 / 2;
   grid-row: 2 / 5;
-  padding: 16px;
+  padding: 0 16px;
 } 
 
 .card {
@@ -136,13 +177,19 @@ html, body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   border-left: 10px solid #3B82F6;
+  padding: 1em;
+}
+
+.card > h1 {
+  margin-bottom: 0.5em;
 }
 
 .board-header {
   background-color: var(--background);
   grid-area: 1 / 1 / 2 / 2;
   padding-left: 16px;
-  
+  font-size: var(--fs-xl);
+  margin-top: 0.5em;
 }
 
 .board-side {
@@ -152,7 +199,7 @@ html, body {
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr;
   gap: 16px;
-  padding: 16px;
+  padding: 0 16px;
 }
 
 .board-footer {
@@ -164,6 +211,8 @@ html, body {
 .board-side-header {
   grid-area: 1 / 2 / 2 / 3;
   padding-left: 16px;
+  font-size: var(--fs-xl);
+  margin-top: 0.5em;
 }
 
 .side-card {
@@ -183,4 +232,39 @@ html, body {
   background-color: var(--card);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+}
+
+.second-side-card > p {
+  font-size: var(--fs-xl);
+  margin-top: 0.25em;
+}
+
+svg {
+  width: 1em;
+}
+
+svg path {
+  fill: var(--background); 
+}
+
+.logo {
+  display: flex;
+  gap: 8px;
+  font-size: 2.75rem;
+  margin-bottom: 0.75em;
+}
+
+a {
+  text-decoration: none;
+  color: var(--background);
+}
+
+.sidebar-link {
+  display: flex;
+  gap: 24px;
+}
+
+.sidebar-link:hover {
+  transition: all 0.4s ease;
+  transform: scale(1.15);
 }
