--- a/styles.css
+++ b/styles.css
@@ -127,13 +127,15 @@ h1 {
 
 
 .header-top {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .header-bottom {
-    display:flex;
+    display:grid;
     justify-content: space-around;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
 }
 
 .sidebar-top {
@@ -178,6 +180,12 @@ h1 {
   border-radius: 10px;
   border-left: 10px solid #3B82F6;
   padding: 1em;
+
+  transition: all 0.4s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.03);
 }
 
 .card > h1 {
@@ -239,11 +247,11 @@ h1 {
   margin-top: 0.25em;
 }
 
-svg {
+.sidebar svg {
   width: 1em;
 }
 
-svg path {
+.sidebar svg path {
   fill: var(--background); 
 }
 
@@ -262,9 +270,110 @@ a {
 .sidebar-link {
   display: flex;
   gap: 24px;
+  transition: all 0.4s ease-in-out;
 }
 
 .sidebar-link:hover {
-  transition: all 0.4s ease;
   transform: scale(1.15);
 }
+
+.header-top input[type='text']
+ {
+  background-color: var(--background);
+  border: 2px solid var(--primary-accent);
+  border-radius: 20px;
+  width: 50em;
+  padding: 8px;
+  font-size: var(--fs-sm);
+}
+
+.search {
+  display: flex;
+}
+
+
+.search form {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.search svg, .header svg {
+  width: 2em;
+}
+
+.search svg path, .header svg path {
+  fill: var(--text-primary); 
+}
+
+.user-img {
+  width: 150px;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 20px;
+  margin-right: 24px;
+}
+
+.user svg:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.user p {
+  font-size: var(--fs-lg);
+  font-weight: var(--fw-semibold);
+}
+
+.user-greeting p:last-child {
+  font-size: var(--fs-lg);
+  font-weight: var(--fw-semibold);
+}
+
+.user-greeting {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.button-group {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 56px;
+  margin-right: 24px;
+}
+
+.button-group button {
+  align-items: center;
+  background-color: var(--primary-accent);
+  color: var(--card);
+  border-radius: 100px;
+  padding: 0px;
+  border: 0;
+  cursor: pointer;
+  justify-content: center;
+  min-height: 40px;
+  min-width: 100px;
+  overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  touch-action: manipulation;
+  
+}
+
+
+.button-group button:hover { 
+  transform: scale(1.1);
+  background-color: var(--sidebar);
+  color: var(--card);
+}
+
+.button-group button:active {
+  background: var(--sidebar);
+  color: var(--card);
+}
+
