--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,6 @@ h1 {
     padding: 0.75rem 1rem;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
     z-index: 10;
-    
 }
 
 .sidebar {
@@ -129,6 +128,10 @@ h1 {
 .header-top {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    max-height: 80px;
+    position: sticky;
+    top: 0;
+    background-color: var(--card);
 }
 
 .header-bottom {
@@ -136,6 +139,7 @@ h1 {
     justify-content: space-around;
     align-items: center;
     grid-template-columns: 1fr 1fr;
+    max-height: 80px;
 }
 
 .sidebar-top {
@@ -227,6 +231,17 @@ h1 {
   background-color: var(--card);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  gap: 8px;
+  
+  padding: 24px;
+}
+
+.side-card-content {
+  overflow:hidden;
+  padding-bottom: 16px;
 }
 
 .second-side-card {
@@ -240,6 +255,9 @@ h1 {
   background-color: var(--card);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .second-side-card > p {
@@ -306,7 +324,7 @@ a {
 }
 
 .user-img {
-  width: 150px;
+  width: 140px;
 }
 
 .user {
@@ -376,3 +394,10 @@ a {
   color: var(--card);
 }
 
+h3 {
+  padding: 0.3em 0 0.1em
+}
+
+.divider {
+border-bottom: 1px solid var(--primary-accent);
+}
