Add Content and Stylign for Sidecard 2

--- a/styles.css
+++ b/styles.css
@@ -256,9 +256,9 @@ h1 {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   display: grid;
-  grid-template-columns: 1fr 2fr;
   grid-template-rows: repeat(4, 1fr);
 }
+
 
 .second-side-card > p {
   font-size: var(--fs-xl);
@@ -400,4 +400,31 @@ h3 {
 
 .divider {
 border-bottom: 1px solid var(--primary-accent);
+}
+
+.card2-content svg {
+  width: 3em;
+}
+
+.first {
+  grid-row: 1 / 2;
+}
+
+.second {
+  grid-row: 2 / 3;
+}
+
+.third {
+  grid-row: 3 / 4;
+}
+
+.fourth {
+  grid-row: 4 / 5;
+}
+
+.card2-content  {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 0 24px
 }
