--- a/styles.css
+++ b/styles.css
@@ -95,104 +95,90 @@ h1 {
 }
 
 .header {
-    background-color: var(--card);
-    color: var(--text-primary);
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    display: grid;
-    padding: 0.75rem 1rem;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-    z-index: 10;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  background-color: var(--card);
+  color: var(--text-primary);
+  display: grid;
+  padding: 0.75rem 1rem;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  z-index: 10;
 }
 
 .sidebar {
-    background-color: var(--sidebar);
-    color: var(--background);
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  background-color: var(--sidebar);
+  color: var(--background);
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .board {
-    background-color: var(--background);
-    color: var(--text-primary);
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 0.5fr 3fr 3fr 3fr 0.5fr;
-    gap: 8px;
-    
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: auto 1fr;
+  gap: 1rem;
+  background-color: var(--background);
 }
 
 
 .header-top {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    max-height: 80px;
-    position: sticky;
-    top: 0;
-    background-color: var(--card);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header-bottom {
-    display:grid;
-    justify-content: space-around;
-    align-items: center;
-    grid-template-columns: 1fr 1fr;
-    max-height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: .5rem;
 }
 
-.sidebar-top {
-  line-height: 2em;
-  align-items: flex-start;
-  font-size: var(--fs-xxl);
-  font-weight: var(--fw-bold);
-  margin: 1em 0 0 2em;
-}
-
+.sidebar-top,
 .sidebar-bottom {
-  line-height: 2em;
-  margin-top: 1.5em;
-  font-size: var(--fs-xxl);
-  font-weight: var(--fw-bold);
-  align-items: flex-start;
-  margin: 1.5em 0 0 2em;
-}
-
-.sidebar {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-}
-
-.sidebar-top, .sidebar-bottom {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  font-size: var(--fs-xxl);
+  font-weight: var(--fw-semibold);
+  padding: 1rem 2.5rem;
 }
 
+
 .board-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 16px;
   grid-column: 1 / 2;
-  grid-row: 2 / 5;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 16px;
   padding: 0 16px;
-} 
+}
 
 .card {
   background-color: var(--card);
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  border-left: 10px solid #3B82F6;
+  border-left: 10px solid var(--primary-accent);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
   padding: 1em;
+  transition: transform 0.3s ease;
+  max-height: 450px;
+  position: relative;
+}
 
-  transition: all 0.4s ease-in-out;
+.screenshot {
+  max-height: 80%;
+  border-radius: 6px;
 }
 
 .card:hover {
   transform: scale(1.03);
 }
 
-.card > h1 {
+.card h1 {
+  font-size: var(--fs-lg);
   margin-bottom: 0.5em;
 }
 
@@ -212,6 +198,7 @@ h1 {
   grid-template-columns: 1fr;
   gap: 16px;
   padding: 0 16px;
+  max-height: 600px;
 }
 
 .board-footer {
@@ -235,7 +222,7 @@ h1 {
   overflow: hidden;
   flex-direction: column;
   gap: 8px;
-  
+  max-height: fit-content;
   padding: 24px;
 }
 
@@ -257,6 +244,7 @@ h1 {
   border-radius: 10px;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
+  max-height: fit-content;
 }
 
 
@@ -394,9 +382,7 @@ a {
   color: var(--card);
 }
 
-h3 {
-  padding: 0.3em 0 0.1em
-}
+
 
 .divider {
 border-bottom: 1px solid var(--primary-accent);
@@ -425,6 +411,23 @@ border-bottom: 1px solid var(--primary-accent);
 .card2-content  {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   gap: 8px;
-  padding: 0 24px
+  padding: 4px 24px
+}
+
+.icons {
+  display: flex;
+  position: absolute;
+  bottom: 12px;
+  right: 12px;
+  gap: 8px;
+}
+
+.icons svg {
+  width: 2em;
+}
+
+.icons svg:hover {
+  transform: scale(1.15);
 }
